move grid search table

--- a/Code/Evaluation/Grid Search Table.ipynb
+++ b/Code/Evaluation/Grid Search Table.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "48                                 0.8, 1  "
       ]
      },
-     "execution_count": 280,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,117 +390,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ac662 th {\n",
+       "#T_455ba th {\n",
        "  text-align: center;\n",
        "}\n",
-       "#T_ac662_row0_col0, #T_ac662_row0_col1, #T_ac662_row0_col2, #T_ac662_row1_col0, #T_ac662_row1_col1, #T_ac662_row1_col2, #T_ac662_row2_col0, #T_ac662_row2_col1, #T_ac662_row2_col2, #T_ac662_row3_col0, #T_ac662_row3_col1, #T_ac662_row3_col2, #T_ac662_row4_col0, #T_ac662_row4_col1, #T_ac662_row4_col2, #T_ac662_row5_col0, #T_ac662_row5_col1, #T_ac662_row5_col2, #T_ac662_row6_col0, #T_ac662_row6_col1, #T_ac662_row6_col2, #T_ac662_row7_col0, #T_ac662_row7_col1, #T_ac662_row7_col2, #T_ac662_row8_col0, #T_ac662_row8_col1, #T_ac662_row8_col2, #T_ac662_row9_col0, #T_ac662_row9_col1, #T_ac662_row9_col2, #T_ac662_row10_col0, #T_ac662_row10_col1, #T_ac662_row10_col2, #T_ac662_row11_col0, #T_ac662_row11_col1, #T_ac662_row11_col2, #T_ac662_row12_col0, #T_ac662_row12_col1, #T_ac662_row12_col2, #T_ac662_row13_col0, #T_ac662_row13_col1, #T_ac662_row13_col2, #T_ac662_row14_col0, #T_ac662_row14_col1, #T_ac662_row14_col2, #T_ac662_row15_col0, #T_ac662_row15_col1, #T_ac662_row15_col2 {\n",
+       "#T_455ba_row0_col0, #T_455ba_row0_col1, #T_455ba_row0_col2, #T_455ba_row1_col0, #T_455ba_row1_col1, #T_455ba_row1_col2, #T_455ba_row2_col0, #T_455ba_row2_col1, #T_455ba_row2_col2, #T_455ba_row3_col0, #T_455ba_row3_col1, #T_455ba_row3_col2, #T_455ba_row4_col0, #T_455ba_row4_col1, #T_455ba_row4_col2, #T_455ba_row5_col0, #T_455ba_row5_col1, #T_455ba_row5_col2, #T_455ba_row6_col0, #T_455ba_row6_col1, #T_455ba_row6_col2, #T_455ba_row7_col0, #T_455ba_row7_col1, #T_455ba_row7_col2, #T_455ba_row8_col0, #T_455ba_row8_col1, #T_455ba_row8_col2, #T_455ba_row9_col0, #T_455ba_row9_col1, #T_455ba_row9_col2, #T_455ba_row10_col0, #T_455ba_row10_col1, #T_455ba_row10_col2, #T_455ba_row11_col0, #T_455ba_row11_col1, #T_455ba_row11_col2, #T_455ba_row12_col0, #T_455ba_row12_col1, #T_455ba_row12_col2, #T_455ba_row13_col0, #T_455ba_row13_col1, #T_455ba_row13_col2, #T_455ba_row14_col0, #T_455ba_row14_col1, #T_455ba_row14_col2, #T_455ba_row15_col0, #T_455ba_row15_col1, #T_455ba_row15_col2 {\n",
        "  text-align: center;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ac662\">\n",
+       "<table id=\"T_455ba\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_ac662_level0_col0\" class=\"col_heading level0 col0\" >Classifier</th>\n",
-       "      <th id=\"T_ac662_level0_col1\" class=\"col_heading level0 col1\" >Hyperparameter</th>\n",
-       "      <th id=\"T_ac662_level0_col2\" class=\"col_heading level0 col2\" >Options</th>\n",
+       "      <th id=\"T_455ba_level0_col0\" class=\"col_heading level0 col0\" >Classifier</th>\n",
+       "      <th id=\"T_455ba_level0_col1\" class=\"col_heading level0 col1\" >Hyperparameter</th>\n",
+       "      <th id=\"T_455ba_level0_col2\" class=\"col_heading level0 col2\" >Options</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_ac662_row0_col1\" class=\"data row0 col1\" >solver</td>\n",
-       "      <td id=\"T_ac662_row0_col2\" class=\"data row0 col2\" >saga</td>\n",
+       "      <td id=\"T_455ba_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_455ba_row0_col1\" class=\"data row0 col1\" >solver</td>\n",
+       "      <td id=\"T_455ba_row0_col2\" class=\"data row0 col2\" >saga</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_ac662_row1_col1\" class=\"data row1 col1\" >penalty</td>\n",
-       "      <td id=\"T_ac662_row1_col2\" class=\"data row1 col2\" >None, elasticnet</td>\n",
+       "      <td id=\"T_455ba_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_455ba_row1_col1\" class=\"data row1 col1\" >penalty</td>\n",
+       "      <td id=\"T_455ba_row1_col2\" class=\"data row1 col2\" >None, elasticnet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_ac662_row2_col1\" class=\"data row2 col1\" >C</td>\n",
-       "      <td id=\"T_ac662_row2_col2\" class=\"data row2 col2\" >1, 0.001, 0.01, 0.1, 10, 100</td>\n",
+       "      <td id=\"T_455ba_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_455ba_row2_col1\" class=\"data row2 col1\" >C</td>\n",
+       "      <td id=\"T_455ba_row2_col2\" class=\"data row2 col2\" >1, 0.001, 0.01, 0.1, 10, 100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row3_col0\" class=\"data row3 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_ac662_row3_col1\" class=\"data row3 col1\" >class_weight</td>\n",
-       "      <td id=\"T_ac662_row3_col2\" class=\"data row3 col2\" >None, balanced</td>\n",
+       "      <td id=\"T_455ba_row3_col0\" class=\"data row3 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_455ba_row3_col1\" class=\"data row3 col1\" >class_weight</td>\n",
+       "      <td id=\"T_455ba_row3_col2\" class=\"data row3 col2\" >None, balanced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row4_col0\" class=\"data row4 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_ac662_row4_col1\" class=\"data row4 col1\" >multi_class</td>\n",
-       "      <td id=\"T_ac662_row4_col2\" class=\"data row4 col2\" >ovr, multinomial</td>\n",
+       "      <td id=\"T_455ba_row4_col0\" class=\"data row4 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_455ba_row4_col1\" class=\"data row4 col1\" >multi_class</td>\n",
+       "      <td id=\"T_455ba_row4_col2\" class=\"data row4 col2\" >ovr, multinomial</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row5_col0\" class=\"data row5 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_ac662_row5_col1\" class=\"data row5 col1\" >l1_ratio</td>\n",
-       "      <td id=\"T_ac662_row5_col2\" class=\"data row5 col2\" >0.0, 0.25, 0.5, 0.75, 1.0</td>\n",
+       "      <td id=\"T_455ba_row5_col0\" class=\"data row5 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_455ba_row5_col1\" class=\"data row5 col1\" >l1_ratio</td>\n",
+       "      <td id=\"T_455ba_row5_col2\" class=\"data row5 col2\" >0.0, 0.25, 0.5, 0.75, 1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row6_col0\" class=\"data row6 col0\" >SVM</td>\n",
-       "      <td id=\"T_ac662_row6_col1\" class=\"data row6 col1\" >c_values</td>\n",
-       "      <td id=\"T_ac662_row6_col2\" class=\"data row6 col2\" >0.09999999999999999, 1.0, 10.0, 100.0</td>\n",
+       "      <td id=\"T_455ba_row6_col0\" class=\"data row6 col0\" >SVM</td>\n",
+       "      <td id=\"T_455ba_row6_col1\" class=\"data row6 col1\" >c_values</td>\n",
+       "      <td id=\"T_455ba_row6_col2\" class=\"data row6 col2\" >0.09999999999999999, 1.0, 10.0, 100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row7_col0\" class=\"data row7 col0\" >SVM</td>\n",
-       "      <td id=\"T_ac662_row7_col1\" class=\"data row7 col1\" >kernel_grid</td>\n",
-       "      <td id=\"T_ac662_row7_col2\" class=\"data row7 col2\" >rbf, poly</td>\n",
+       "      <td id=\"T_455ba_row7_col0\" class=\"data row7 col0\" >SVM</td>\n",
+       "      <td id=\"T_455ba_row7_col1\" class=\"data row7 col1\" >kernel_grid</td>\n",
+       "      <td id=\"T_455ba_row7_col2\" class=\"data row7 col2\" >rbf, poly</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row8_col0\" class=\"data row8 col0\" >SVM</td>\n",
-       "      <td id=\"T_ac662_row8_col1\" class=\"data row8 col1\" >gamma_grid</td>\n",
-       "      <td id=\"T_ac662_row8_col2\" class=\"data row8 col2\" >0.09999999999999999, 1.0, 10.0, 100.0</td>\n",
+       "      <td id=\"T_455ba_row8_col0\" class=\"data row8 col0\" >SVM</td>\n",
+       "      <td id=\"T_455ba_row8_col1\" class=\"data row8 col1\" >gamma_grid</td>\n",
+       "      <td id=\"T_455ba_row8_col2\" class=\"data row8 col2\" >0.09999999999999999, 1.0, 10.0, 100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row9_col0\" class=\"data row9 col0\" >SVM</td>\n",
-       "      <td id=\"T_ac662_row9_col1\" class=\"data row9 col1\" >degree_grid</td>\n",
-       "      <td id=\"T_ac662_row9_col2\" class=\"data row9 col2\" >2, 3, 5, 7</td>\n",
+       "      <td id=\"T_455ba_row9_col0\" class=\"data row9 col0\" >SVM</td>\n",
+       "      <td id=\"T_455ba_row9_col1\" class=\"data row9 col1\" >degree_grid</td>\n",
+       "      <td id=\"T_455ba_row9_col2\" class=\"data row9 col2\" >2, 3, 5, 7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row10_col0\" class=\"data row10 col0\" >SVM</td>\n",
-       "      <td id=\"T_ac662_row10_col1\" class=\"data row10 col1\" >k_folds</td>\n",
-       "      <td id=\"T_ac662_row10_col2\" class=\"data row10 col2\" >5</td>\n",
+       "      <td id=\"T_455ba_row10_col0\" class=\"data row10 col0\" >SVM</td>\n",
+       "      <td id=\"T_455ba_row10_col1\" class=\"data row10 col1\" >k_folds</td>\n",
+       "      <td id=\"T_455ba_row10_col2\" class=\"data row10 col2\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row11_col0\" class=\"data row11 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_ac662_row11_col1\" class=\"data row11 col1\" >learning_rate</td>\n",
-       "      <td id=\"T_ac662_row11_col2\" class=\"data row11 col2\" >0.01, 0.1, 0.3</td>\n",
+       "      <td id=\"T_455ba_row11_col0\" class=\"data row11 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_455ba_row11_col1\" class=\"data row11 col1\" >learning_rate</td>\n",
+       "      <td id=\"T_455ba_row11_col2\" class=\"data row11 col2\" >0.01, 0.1, 0.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row12_col0\" class=\"data row12 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_ac662_row12_col1\" class=\"data row12 col1\" >n_estimators</td>\n",
-       "      <td id=\"T_ac662_row12_col2\" class=\"data row12 col2\" >100, 200</td>\n",
+       "      <td id=\"T_455ba_row12_col0\" class=\"data row12 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_455ba_row12_col1\" class=\"data row12 col1\" >n_estimators</td>\n",
+       "      <td id=\"T_455ba_row12_col2\" class=\"data row12 col2\" >100, 200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row13_col0\" class=\"data row13 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_ac662_row13_col1\" class=\"data row13 col1\" >max_depth</td>\n",
-       "      <td id=\"T_ac662_row13_col2\" class=\"data row13 col2\" >3, 6</td>\n",
+       "      <td id=\"T_455ba_row13_col0\" class=\"data row13 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_455ba_row13_col1\" class=\"data row13 col1\" >max_depth</td>\n",
+       "      <td id=\"T_455ba_row13_col2\" class=\"data row13 col2\" >3, 6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row14_col0\" class=\"data row14 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_ac662_row14_col1\" class=\"data row14 col1\" >subsample</td>\n",
-       "      <td id=\"T_ac662_row14_col2\" class=\"data row14 col2\" >0.8, 1</td>\n",
+       "      <td id=\"T_455ba_row14_col0\" class=\"data row14 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_455ba_row14_col1\" class=\"data row14 col1\" >subsample</td>\n",
+       "      <td id=\"T_455ba_row14_col2\" class=\"data row14 col2\" >0.8, 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_ac662_row15_col0\" class=\"data row15 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_ac662_row15_col1\" class=\"data row15 col1\" >colsample_bytree</td>\n",
-       "      <td id=\"T_ac662_row15_col2\" class=\"data row15 col2\" >0.8, 1</td>\n",
+       "      <td id=\"T_455ba_row15_col0\" class=\"data row15 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_455ba_row15_col1\" class=\"data row15 col1\" >colsample_bytree</td>\n",
+       "      <td id=\"T_455ba_row15_col2\" class=\"data row15 col2\" >0.8, 1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1ec21c2ca10>"
+       "<pandas.io.formats.style.Styler at 0x245ac01e780>"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,10 +519,10 @@
     "                                        .hide(axis=\"index\"))\n",
     "\n",
     "# Save to PNG\n",
-    "dfi.export(grid_search_table, '../../Output/Classifier Evaluation/Grid Search Table.png')\n",
+    "dfi.export(grid_search_table, '../../Output/Classifier Fitting/Grid Search Table.png')\n",
     "\n",
     "# Save to Excel\n",
-    "grid_search_table.to_excel('../../Output/Classifier Evaluation/Grid Search Table.xlsx', index=False)\n",
+    "grid_search_table.to_excel('../../Output/Classifier Fitting/Grid Search Table.xlsx', index=False)\n",
     "\n",
     "grid_search_table"
    ]
